--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
               <input type="text" id="logComment" placeholder="e.g., Project X, urgent task">
             </div>
 
+            <div class="form-group" id="approvedByGroup" style="display: none;">
+              <label for="logApprovedBy">Approved By</label>
+              <input type="text" id="logApprovedBy" placeholder="Manager name">
+            </div>
+
             <div class="form-actions">
               <button type="submit" class="btn btn-primary">Save</button>
               <button type="button" id="cancelFormBtn" class="btn btn-secondary">Cancel</button>
@@ -159,6 +164,11 @@
             <div class="form-group">
               <label for="adminLogComment">Comment</label>
               <input type="text" id="adminLogComment" placeholder="e.g., Project X, urgent task">
+            </div>
+
+            <div class="form-group" id="adminApprovedByGroup" style="display: none;">
+              <label for="adminLogApprovedBy">Approved By</label>
+              <input type="text" id="adminLogApprovedBy" placeholder="Manager name">
             </div>
 
             <div class="form-actions">
