--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
             <button id="settingsBtn" class="btn btn-secondary">
               <span>⚙️</span> Multiplier: <span id="multiplierDisplay">1.5</span>x
             </button>
+            <button id="refreshBtn" class="btn btn-secondary" title="Обновить данные">
+              <span>🔄</span> Обновить
+            </button>
           </div>
+          <button id="refreshUserBtn" class="btn btn-secondary hidden" title="Обновить данные">
+            <span>🔄</span> Обновить
+          </button>
           <button id="logoutBtn" class="btn btn-secondary">
             <span>🚪</span> Logout
           </button>
@@ -108,9 +114,17 @@
 
         <!-- History -->
         <div class="card">
-          <h2 class="card-title">
-            <span>📅</span> Your History
-          </h2>
+          <div class="card-header-with-actions">
+            <h2 class="card-title">
+              <span>📅</span> Your History
+            </h2>
+            <button id="userExportBtn" class="btn btn-secondary btn-small">
+              <span>📥</span> Экспорт
+            </button>
+          </div>
+          <div class="search-container">
+            <input type="text" id="userSearchInput" class="search-input" placeholder="Поиск по комментариям...">
+          </div>
           <div id="userLogs" class="logs-list"></div>
         </div>
       </div>
@@ -138,6 +152,13 @@
           <form id="adminAddLogForm" class="add-log-form hidden">
             <h3>New Entry</h3>
             
+            <div class="form-group">
+              <label for="adminLogUserEmail">Employee</label>
+              <select id="adminLogUserEmail" class="form-select">
+                <option value="">Select employee...</option>
+              </select>
+            </div>
+
             <div class="form-group">
               <label>Type</label>
               <div class="type-selector">
@@ -188,9 +209,17 @@
 
         <!-- History -->
         <div class="card">
-          <h2 class="card-title">
-            <span>📋</span> <span id="historyTitle">All Records</span>
-          </h2>
+          <div class="card-header-with-actions">
+            <h2 class="card-title">
+              <span>📋</span> <span id="historyTitle">All Records</span>
+            </h2>
+            <button id="adminExportBtn" class="btn btn-secondary btn-small">
+              <span>📥</span> Экспорт
+            </button>
+          </div>
+          <div class="search-container">
+            <input type="text" id="adminSearchInput" class="search-input" placeholder="Поиск по сотруднику, комментарию...">
+          </div>
           <div id="adminLogs" class="logs-table-container">
             <table class="logs-table">
               <thead>
@@ -215,6 +244,36 @@
   <!-- Loading overlay -->
   <div id="loadingOverlay" class="loading-overlay hidden">
     <div class="spinner"></div>
+  </div>
+
+  <!-- Toast notifications container -->
+  <div id="toastContainer" class="toast-container"></div>
+
+  <!-- Delete confirmation modal -->
+  <div id="deleteModal" class="modal hidden">
+    <div class="modal-content">
+      <h3>Подтверждение удаления</h3>
+      <p>Вы уверены, что хотите удалить эту запись? Это действие нельзя отменить.</p>
+      <div class="modal-actions">
+        <button id="deleteConfirmBtn" class="btn btn-danger">Удалить</button>
+        <button id="deleteCancelBtn" class="btn btn-secondary">Отмена</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Multiplier edit modal -->
+  <div id="multiplierModal" class="modal hidden">
+    <div class="modal-content">
+      <h3>Изменение множителя переработки</h3>
+      <div class="form-group">
+        <label for="multiplierInput">Новый множитель:</label>
+        <input type="number" id="multiplierInput" step="0.1" min="0.1" placeholder="1.5">
+      </div>
+      <div class="modal-actions">
+        <button id="multiplierConfirmBtn" class="btn btn-primary">Сохранить</button>
+        <button id="multiplierCancelBtn" class="btn btn-secondary">Отмена</button>
+      </div>
+    </div>
   </div>
 
   <script src="app.js"></script>
