--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overtime & Time Off Tracker</title>
+  <title>Toil Tracker</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
@@ -13,8 +13,7 @@
     <div class="login-card">
       <div class="login-header">
         <div class="icon-clock">⏰</div>
-        <h1>Overtime Tracker</h1>
-        <p>and Time Off (1.5x)</p>
+        <h1>Toil tracker</h1>
       </div>
       <div id="googleSignInButton" class="google-signin-container"></div>
       <p class="login-hint">Sign in with your corporate Google account</p>
@@ -29,7 +28,7 @@
         <div class="header-left">
           <div class="icon-clock">⏰</div>
           <div>
-            <h1 id="headerTitle">Учёт переработок</h1>
+            <h1 id="headerTitle">Toil Tracker</h1>
             <p id="headerSubtitle" class="header-subtitle"></p>
           </div>
         </div>
@@ -38,12 +37,12 @@
             <button id="settingsBtn" class="btn btn-secondary">
               <span>⚙️</span> Multiplier: <span id="multiplierDisplay">1.5</span>x
             </button>
-            <button id="refreshBtn" class="btn btn-secondary" title="Обновить данные">
-              <span>🔄</span> Обновить
+            <button id="refreshBtn" class="btn btn-secondary" title="Refresh data">
+              <span>🔄</span> Refresh
             </button>
           </div>
-          <button id="refreshUserBtn" class="btn btn-secondary hidden" title="Обновить данные">
-            <span>🔄</span> Обновить
+          <button id="refreshUserBtn" class="btn btn-secondary hidden" title="Refresh data">
+            <span>🔄</span> Refresh
           </button>
           <button id="logoutBtn" class="btn btn-secondary">
             <span>🚪</span> Logout
@@ -173,60 +172,6 @@
             </div>
           </div>
           
-          <div id="adminAddFormToggle" class="add-form-toggle">
-            <button class="btn btn-primary btn-large">
-              <span>➕</span> Add Entry
-            </button>
-          </div>
-          <form id="adminAddLogForm" class="add-log-form hidden">
-            <h3>New Entry</h3>
-            
-            <div class="form-group">
-              <label for="adminLogUserEmail">Employee</label>
-              <select id="adminLogUserEmail" class="form-select">
-                <option value="">Select employee...</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label>Type</label>
-              <div class="type-selector">
-                <button type="button" class="type-btn active" data-type="overtime">
-                  Overtime
-                </button>
-                <button type="button" class="type-btn" data-type="timeoff">
-                  Time Off
-                </button>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="adminLogDate">Date</label>
-              <input type="date" id="adminLogDate" required>
-            </div>
-
-            <div class="form-group">
-              <label for="adminLogHours">Hours</label>
-              <input type="number" id="adminLogHours" step="0.25" min="0.25" max="24" required placeholder="e.g., 4.5" title="Enter hours worked (0.25 to 24)">
-              <p id="adminCreditedPreview" class="credited-preview"></p>
-              <small style="color: var(--gray-500); font-size: 12px; margin-top: 4px; display: block;">Minimum: 0.25 hours (15 min)</small>
-            </div>
-
-            <div class="form-group">
-              <label for="adminLogComment">Comment <span style="color: var(--gray-400); font-weight: normal;">(optional)</span></label>
-              <input type="text" id="adminLogComment" placeholder="e.g., Project X, urgent task" maxlength="200">
-            </div>
-
-            <div class="form-group" id="adminApprovedByGroup" style="display: none;">
-              <label for="adminLogApprovedBy">Approved By</label>
-              <input type="text" id="adminLogApprovedBy" placeholder="Manager name">
-            </div>
-
-            <div class="form-actions">
-              <button type="submit" class="btn btn-primary">Save</button>
-              <button type="button" id="adminCancelFormBtn" class="btn btn-secondary">Cancel</button>
-            </div>
-          </form>
         </div>
 
         <!-- Employees List -->
@@ -239,19 +184,9 @@
 
         <!-- History -->
         <div class="card">
-          <div class="card-header-with-actions">
-            <h2 class="card-title">
-              <span>📋</span> <span id="historyTitle">All Records</span>
-            </h2>
-            <button id="adminExportBtn" class="btn btn-secondary btn-small">
-              <span>📥</span> Экспорт
-            </button>
-          </div>
-          <div class="search-container">
-            <div class="search-wrapper">
-              <input type="text" id="adminSearchInput" class="search-input" placeholder="Поиск по сотруднику, комментарию...">
-            </div>
-          </div>
+          <h2 class="card-title">
+            <span>📋</span> <span id="historyTitle">All Records</span>
+          </h2>
           <div class="date-filters" id="adminDateFilters">
             <button class="date-filter-btn active" data-filter="all">All</button>
             <button class="date-filter-btn" data-filter="today">Today</button>
@@ -290,11 +225,11 @@
   <!-- Delete confirmation modal -->
   <div id="deleteModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Подтверждение удаления</h3>
-      <p>Вы уверены, что хотите удалить эту запись? Это действие нельзя отменить.</p>
+      <h3>Confirm Deletion</h3>
+      <p>Are you sure you want to delete this entry? This action cannot be undone.</p>
       <div class="modal-actions">
-        <button id="deleteConfirmBtn" class="btn btn-danger">Удалить</button>
-        <button id="deleteCancelBtn" class="btn btn-secondary">Отмена</button>
+        <button id="deleteConfirmBtn" class="btn btn-danger">Delete</button>
+        <button id="deleteCancelBtn" class="btn btn-secondary">Cancel</button>
       </div>
     </div>
   </div>
@@ -302,14 +237,14 @@
   <!-- Multiplier edit modal -->
   <div id="multiplierModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Изменение множителя переработки</h3>
+      <h3>Change Overtime Multiplier</h3>
       <div class="form-group">
-        <label for="multiplierInput">Новый множитель:</label>
+        <label for="multiplierInput">New multiplier:</label>
         <input type="number" id="multiplierInput" step="0.1" min="0.1" placeholder="1.5">
       </div>
       <div class="modal-actions">
-        <button id="multiplierConfirmBtn" class="btn btn-primary">Сохранить</button>
-        <button id="multiplierCancelBtn" class="btn btn-secondary">Отмена</button>
+        <button id="multiplierConfirmBtn" class="btn btn-primary">Save</button>
+        <button id="multiplierCancelBtn" class="btn btn-secondary">Cancel</button>
       </div>
     </div>
   </div>
