--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         </div>
         <div class="header-actions">
           <div id="adminControls" class="admin-controls hidden">
-            <button id="settingsBtn" class="btn btn-secondary">
-              <span>⚙️</span> Multiplier: <span id="multiplierDisplay">1.5</span>x
-            </button>
             <button id="refreshBtn" class="btn btn-secondary" title="Refresh data">
               <span>🔄</span> Refresh
             </button>
@@ -57,7 +54,12 @@
       <div class="container">
         <!-- Balance -->
         <div class="balance-card">
-          <p class="balance-label">Your Current Balance</p>
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
+            <p class="balance-label">Your Current Balance</p>
+            <button id="editNameBtn" class="btn btn-secondary btn-small" title="Edit your name">
+              <span>✏️</span> Edit Name
+            </button>
+          </div>
           <p id="userBalance" class="balance-value">0.0 hrs</p>
           <p class="balance-multiplier">Overtime Multiplier: <span id="userMultiplier">1.5</span>x</p>
           <div class="balance-stats">
@@ -286,21 +288,34 @@
     </div>
   </div>
 
-  <!-- Multiplier edit modal -->
-  <div id="multiplierModal" class="modal hidden">
+  <!-- Edit name modal -->
+  <div id="editNameModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Change Overtime Multiplier</h3>
+      <h3>Edit Name</h3>
       <div class="form-group">
-        <label for="multiplierInput">New multiplier:</label>
-        <input type="number" id="multiplierInput" step="0.1" min="0.1" placeholder="1.5">
+        <label for="nameInput">Name:</label>
+        <input type="text" id="nameInput" maxlength="100" required>
       </div>
       <div class="modal-actions">
-        <button id="multiplierConfirmBtn" class="btn btn-primary">Save</button>
-        <button id="multiplierCancelBtn" class="btn btn-secondary">Cancel</button>
+        <button id="nameConfirmBtn" class="btn btn-primary">Save</button>
+        <button id="nameCancelBtn" class="btn btn-secondary">Cancel</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Delete user confirmation modal -->
+  <div id="deleteUserModal" class="modal hidden">
+    <div class="modal-content">
+      <h3>Confirm User Deletion</h3>
+      <p id="deleteUserMessage">Are you sure you want to delete this user? This action cannot be undone.</p>
+      <div class="modal-actions">
+        <button id="deleteUserConfirmBtn" class="btn btn-danger">Delete</button>
+        <button id="deleteUserCancelBtn" class="btn btn-secondary">Cancel</button>
       </div>
     </div>
   </div>
 
   <script src="app.js"></script>
 </body>
+</html>
 </html>
