Fix user sort toggle, remove all export functionality, translate Russian comments to English
- Add missing userSortToggle handler for user view
- Remove all export functions (handleAdminExport, handleUserExport)
- Remove export button from HTML
- Translate all Russian comments to English
- Clean up code comments

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <!-- Основной интерфейс -->
   <div id="mainApp" class="main-app hidden">
-    <!-- Хедер -->
+    <!-- Header -->
     <header class="app-header">
       <div class="header-content">
         <div class="header-left">
@@ -107,7 +107,7 @@
       </div>
     </header>
 
-    <!-- Контент для сотрудника -->
+    <!-- Employee Content -->
     <div id="userView" class="user-view hidden">
       <div class="container">
         <!-- Balance -->
@@ -189,9 +189,6 @@
             <h2 class="card-title">
               <span>📅</span> Your History
             </h2>
-            <button id="userExportBtn" class="btn btn-secondary btn-small">
-              <span>📥</span> Export
-            </button>
           </div>
           <div class="search-container">
             <div class="search-wrapper">
