--- a/index.html
+++ b/index.html
@@ -13,8 +13,27 @@
   <div id="loginScreen" class="login-screen">
     <div class="login-card">
       <div class="login-header">
-        <div class="icon-clock">⏰</div>
-        <h1>Toil tracker</h1>
+        <div class="login-icon">
+          <svg viewBox="0 0 100 100" width="80" height="80">
+            <defs>
+              <linearGradient id="iconGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#667eea"/>
+                <stop offset="100%" style="stop-color:#764ba2"/>
+              </linearGradient>
+            </defs>
+            <circle cx="50" cy="50" r="45" fill="none" stroke="url(#iconGradient)" stroke-width="4"/>
+            <circle cx="50" cy="50" r="38" fill="none" stroke="url(#iconGradient)" stroke-width="2" opacity="0.3"/>
+            <line x1="50" y1="50" x2="50" y2="25" stroke="url(#iconGradient)" stroke-width="4" stroke-linecap="round"/>
+            <line x1="50" y1="50" x2="68" y2="58" stroke="url(#iconGradient)" stroke-width="3" stroke-linecap="round"/>
+            <circle cx="50" cy="50" r="4" fill="url(#iconGradient)"/>
+            <circle cx="50" cy="15" r="2" fill="url(#iconGradient)"/>
+            <circle cx="85" cy="50" r="2" fill="url(#iconGradient)"/>
+            <circle cx="50" cy="85" r="2" fill="url(#iconGradient)"/>
+            <circle cx="15" cy="50" r="2" fill="url(#iconGradient)"/>
+          </svg>
+        </div>
+        <h1>Toil Tracker</h1>
+        <p class="login-subtitle">Track your overtime & time off</p>
       </div>
       
       <!-- Auth Tabs -->
@@ -85,13 +104,24 @@
     <header class="app-header">
       <div class="header-content">
         <div class="header-left">
-          <div class="icon-clock">⏰</div>
+          <div class="header-icon">
+            <svg viewBox="0 0 100 100" width="40" height="40">
+              <circle cx="50" cy="50" r="45" fill="none" stroke="currentColor" stroke-width="4"/>
+              <line x1="50" y1="50" x2="50" y2="25" stroke="currentColor" stroke-width="4" stroke-linecap="round"/>
+              <line x1="50" y1="50" x2="68" y2="58" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+              <circle cx="50" cy="50" r="4" fill="currentColor"/>
+            </svg>
+          </div>
           <div>
             <h1 id="headerTitle">Toil Tracker</h1>
             <p id="headerSubtitle" class="header-subtitle"></p>
           </div>
         </div>
         <div class="header-actions">
+          <button id="themeToggle" class="btn btn-icon" title="Toggle dark mode">
+            <span class="theme-icon-light">🌙</span>
+            <span class="theme-icon-dark hidden">☀️</span>
+          </button>
           <div id="adminControls" class="admin-controls hidden">
             <button id="refreshBtn" class="btn btn-secondary" title="Refresh data">
               <span>🔄</span> Refresh
@@ -128,6 +158,49 @@
             <div class="balance-stat-item">
               <div class="balance-stat-label">Total Entries</div>
               <div class="balance-stat-value" id="userTotalEntries">0</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Quick Add Buttons -->
+        <div class="card quick-add-card">
+          <h3 class="quick-add-title">Quick Add Overtime</h3>
+          <div class="quick-add-buttons">
+            <button class="quick-add-btn" data-hours="1" title="Add 1 hour overtime">
+              <span class="quick-add-hours">+1</span>
+              <span class="quick-add-label">hour</span>
+            </button>
+            <button class="quick-add-btn" data-hours="2" title="Add 2 hours overtime">
+              <span class="quick-add-hours">+2</span>
+              <span class="quick-add-label">hours</span>
+            </button>
+            <button class="quick-add-btn" data-hours="4" title="Add 4 hours overtime">
+              <span class="quick-add-hours">+4</span>
+              <span class="quick-add-label">hours</span>
+            </button>
+            <button class="quick-add-btn quick-add-custom" id="quickAddCustomBtn" title="Custom entry">
+              <span class="quick-add-hours">...</span>
+              <span class="quick-add-label">custom</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- Statistics Chart -->
+        <div class="card">
+          <h3 class="card-title"><span>📊</span> Last 30 Days</h3>
+          <div id="statsChart" class="stats-chart"></div>
+          <div class="stats-summary">
+            <div class="stats-item">
+              <span class="stats-label">Total Overtime</span>
+              <span class="stats-value positive" id="statsTotalOvertime">0 hrs</span>
+            </div>
+            <div class="stats-item">
+              <span class="stats-label">Total Time Off</span>
+              <span class="stats-value negative" id="statsTotalTimeoff">0 hrs</span>
+            </div>
+            <div class="stats-item">
+              <span class="stats-label">Net Change</span>
+              <span class="stats-value" id="statsNetChange">0 hrs</span>
             </div>
           </div>
         </div>
@@ -382,5 +455,4 @@
 
   <script src="app.js"></script>
 </body>
-</html>
 </html>
