Fix dark theme visibility and remove duplicate Add Entry buttons
Changes:
- Fixed user-card visibility in dark theme (selected state)
- Added proper text color for user cards in dark mode
- Removed Add Entry buttons (duplicate of Custom quick add)
- Custom button now directly shows the form
- Simplified form toggle logic

--- a/index.html
+++ b/index.html
@@ -208,13 +208,8 @@
           </div>
         </div>
 
-        <!-- Add Form -->
+        <!-- Add Form (hidden by default, shown when Custom is clicked) -->
         <div class="card">
-          <div id="addFormToggle" class="add-form-toggle">
-            <button class="btn btn-primary btn-large">
-              <span>➕</span> Add Entry
-            </button>
-          </div>
           <form id="addLogForm" class="add-log-form hidden">
             <h3>New Entry</h3>
             
@@ -337,13 +332,8 @@
             </div>
           </div>
 
-          <!-- Add Form for Admin -->
+          <!-- Add Form for Admin (hidden by default, shown when Custom is clicked) -->
           <div class="card" style="margin-top: 24px;">
-            <div id="adminAddFormToggle" class="add-form-toggle">
-              <button class="btn btn-primary btn-large">
-                <span>➕</span> Add Entry
-              </button>
-            </div>
             <form id="adminAddLogForm" class="add-log-form hidden">
               <h3>New Entry</h3>
               
